--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="tab_text_2">Incident Reports</string>
 
     <string name="mapbox_access_token">pk.eyJ1Ijoic2FmYWxmcm9tMjA1MCIsImEiOiJja3RiZGg4OGUxdW0yMnZucjd1anUzb2sxIn0.boXjDw3dQg-zI-rLKA8W1w</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
